# vulkan_development

./: .gitignore  README.md  select_icd.sh  vulkan-setup.sh
examples/headless_triangle/: CMakeLists.txt  main.cpp
examples/headless_triangle_minimal/: CMakeLists.txt  main.cpp
examples/headless_triangle_validation/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp  shader.vert
examples/triangle/android/: build.gradle
examples/triangle/android/src/main/: AndroidManifest.xml
examples/triangle/android/src/main/java/com/android/triangle/: TriangleActivity.java
examples/triangle_minimal/: CMakeLists.txt  main.cpp  main_master.cpp  main_old.cpp  shader.frag
examples/triangle_minimal/android/: build.gradle
examples/triangle_minimal/android/src/main/: AndroidManifest.xml
examples/triangle_minimal/android/src/main/java/com/android/hellovk/: VulkanActivity.java
examples/triangle_validation/: CMakeLists.txt  main.cpp
examples/triangle_validation/android/: release.keystore
scripts/: install-example.sh  install-examples.sh  install-vulkan.sh  select-icd.sh  select-toolchain.sh  setup-env.sh  vulkan-setup.sh
sdk/: vulkan-setup.sh
toolchains/: aarch64-linux-gnu.cmake  aarch64.cmake  arm64-v8a-android33.cmake  arm64-v8a-linux-android33-clang.cmake  x86_64-android33.cmake  x86_64-linux-gnu.cmake
tools/headless_triangle/: CMakeLists.txt  main.cpp
